tests/auto/corelib/xml/qxmlstream/XML-Test-Suite/xmlconf/ibm/invalid/P51/ibm51i01.dtd
<!ELEMENT a (#PCDATA)* >
<!ELEMENT b (#PCDATA) >
<!ELEMENT c ( #PCDATA)*>

<!ELEMENT d (#PCDATA|c)* >
<!--* PEs are not properly nested *-->
<!--* this one miss closing parenthesis *-->
<!ENTITY % mixed1 "(#PCDATA|">
<!ENTITY % mixed2 "c|b|a)*">  
<!ELEMENT e %mixed1;%mixed2; >
<!ELEMENT f (#PCDATA| c)* >
<!ELEMENT g ( #PCDATA) >
<!ELEMENT h (#PCDATA )>



